--- a/Tic-tac-toe.html
+++ b/Tic-tac-toe.html
@@ -272,7 +272,7 @@
         }
 
         closeModal.addEventListener('click', () => {
-            window.location.href = 'welcome.html';
+            window.location.href = 'index.html';
         });
 
         document.getElementById('game-form').addEventListener('submit', function(event) {
